# financial-assistant-bot

./: pyproject.toml
src/config_data/: config.py
